--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "axios": "^1.1.3",
+    "cross-fetch": "^3.1.5",
     "node-fetch": "^3.2.10"
   }
 }
