--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -7,7 +7,12 @@
 	"author": "Max Willmott <max.willmo@gmail.com>",
 	"license": "MIT",
 	"scripts": {
-		"dev": "webpack & PORT=3000 ts-node src/server/index.tsx"
+		"clean": "rm -rf dist",
+		"dev": "yarn clean && yarn webpack && PORT=3000 ts-node src/server/index.tsx"
+	},
+	"dependencies": {
+		"react": "*",
+		"react-dom": "*"
 	}
   }
   
