--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -8,7 +8,7 @@
 	"license": "MIT",
 	"scripts": {
 		"clean": "rm -rf dist",
-		"dev": "yarn clean && yarn webpack && PORT=3000 ts-node src/server/index.tsx"
+		"dev": "yarn clean && yarn webpack && PORT=3000 ts-node --project ./tsconfig.server.json src/server/index.tsx"
 	},
 	"dependencies": {
 		"react": "*",
