--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "turbo": "^1.6.2",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-middleware": "^5.3.3"
   },
   "dependencies": {
     "cross-fetch": "^3.1.5",
-    "node-fetch": "^3.2.10"
+    "node-fetch": "^3.2.10",
+    "webpack-dev-server": "^4.11.1"
   }
 }
