--- a/apps/search/package.json
+++ b/apps/search/package.json
@@ -8,7 +8,9 @@
 	"license": "MIT",
 	"scripts": {
 		"clean": "rm -rf dist",
-		"dev": "PORT=3001 ts-node --project ./tsconfig.server.json src/server/index.tsx"
+		"_dev": "PORT=3001 DELAY=3000 ts-node --project ./tsconfig.server.json src/server/index.tsx",
+		"dev:stream": "RENDER_TYPE=stream yarn _dev",
+		"dev:static": " yarn _dev"
 	},
 	"devDependencies": {},
 	"dependencies": {
