Separate packages for server utils

--- a/apps/promotions/package.json
+++ b/apps/promotions/package.json
@@ -8,13 +8,14 @@
 	"license": "MIT",
 	"scripts": {
 		"clean": "rm -rf dist",
-		"_dev": "PORT=3002 DELAY=4000 ts-node --project ./tsconfig.server.json src/server/index.tsx",
+		"_dev": "PORT=3002 DELAY=3000 ts-node --project ./tsconfig.server.json src/server/index.tsx",
 		"dev:stream": "RENDER_TYPE=stream yarn _dev",
 		"dev:static": "yarn _dev"
 	},
 	"devDependencies": {},
 	"dependencies": {
 		"react": "*",
-		"react-dom": "*"
+		"react-dom": "*",
+		"server-shared": "*"
 	}
 }
