--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -15,7 +15,8 @@
 	"dependencies": {
 		"react": "*",
 		"react-dom": "*",
-		"shared": "*"
+		"server-shared": "*",
+		"fragments": "*"
 	}
   }
   
