--- a/apps/promotions/package.json
+++ b/apps/promotions/package.json
@@ -8,7 +8,7 @@
 	"license": "MIT",
 	"scripts": {
 		"clean": "rm -rf dist",
-		"_dev": "PORT=3002 DELAY=3000 ts-node --project ./tsconfig.server.json src/server/index.tsx",
+		"_dev": "PORT=$PROMOTIONS_PORT DELAY=$PROMOTIONS_DELAY ts-node --project ./tsconfig.server.json src/server/index.tsx",
 		"dev:stream": "RENDER_TYPE=stream yarn _dev",
 		"dev:static": "yarn _dev"
 	},
