--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^18.11.8",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
@@ -33,6 +34,7 @@
   },
   "dependencies": {
     "cross-fetch": "^3.1.5",
+    "dotenv-expand": "^9.0.0",
     "node-fetch": "^3.2.10",
     "webpack-dev-server": "^4.11.1"
   }
