--- a/apps/search/package.json
+++ b/apps/search/package.json
@@ -8,11 +8,10 @@
 	"license": "MIT",
 	"scripts": {
 		"clean": "rm -rf dist",
-		"_dev": "PORT=3001 DELAY=1000 ts-node --project ./tsconfig.server.json src/server/index.tsx",
+		"_dev": "ts-node --project ./tsconfig.server.json src/server/index.tsx",
 		"dev:stream": "RENDER_TYPE=stream yarn _dev",
 		"dev:static": " yarn _dev"
 	},
-	"devDependencies": {},
 	"dependencies": {
 		"react": "*",
 		"react-dom": "*",
