Initial server build

--- a/apps/website/tsconfig.server.json
+++ b/apps/website/tsconfig.server.json
@@ -1,4 +1,5 @@
 {
 	"extends": "../../tsconfig.json",
-	"files": ["src/server/index.tsx"],
+	"include": ["./src/**/*", ],
+	"exclude": ["./src/client/**/*"]
 }
