--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -10,12 +10,16 @@
 		"clean": "rm -rf dist",
 		"_dev": "ts-node --project ./tsconfig.server.json src/server/index.tsx",
 		"dev:stream": "RENDER_TYPE=stream yarn _dev",
-		"dev:static": "yarn _dev"
+		"dev:static": "yarn _dev",
+		"build:server:static": "npx webpack build --config ./webpack.server.config.js"
 	},
 	"dependencies": {
 		"fragments": "*",
 		"react": "*",
 		"react-dom": "*",
 		"server-shared": "*"
+	},
+	"devDependencies": {
+		"terser-webpack-plugin": "^5.3.6"
 	}
 }
