--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   ],
   "scripts": {
     "dev:stream": "turbo dev:stream",
-    "dev:static": "turbo dev:static"
+    "dev:static": "turbo dev:static",
+    "build:server:static": "turbo build:server:static",
+    "start:server": "turbo start:server"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
