--- a/apps/promotions/package.json
+++ b/apps/promotions/package.json
@@ -11,7 +11,8 @@
 		"_dev": "ts-node --project ./tsconfig.server.json src/server/index.tsx",
 		"dev:stream": "RENDER_TYPE=stream yarn _dev",
 		"dev:static": "yarn _dev",
-		"build:server:static": "npx webpack build --config ./webpack.server.config.js",
+		"build:client": "npx webpack build --mode=production",
+		"build:server:static": "yarn build:client && cp -r ./dist ./server_dist && npx webpack build --config ./webpack.server.config.js",
 		"start:server": "node server_dist/server.js"
 	},
 	"dependencies": {
