--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-dev-middleware": "^5.3.3"
   },
   "dependencies": {
+    "@vercel/node": "^2.6.4",
     "cross-fetch": "^3.1.5",
     "dotenv-expand": "^9.0.0",
     "node-fetch": "^3.2.10",
