--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ts-node": "^10.9.1",
     "turbo": "^1.6.2",
     "typescript": "^4.8.4",
+    "vercel": "^28.5.6",
     "webpack": "^5.74.0",
     "webpack-cli": "^5.0.0",
     "webpack-dev-middleware": "^5.3.3"
