--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.4",
     "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
     "turbo": "^1.6.2",
