--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vercel/node": "^2.6.4",
     "cross-fetch": "^3.1.5",
     "dotenv-expand": "^9.0.0",
+    "jotai": "^1.10.0",
     "node-fetch": "^3.2.10",
     "webpack-dev-server": "^4.11.1"
   }
