--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-dev-middleware": "^5.3.3"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.18.0",
     "@vercel/node": "^2.6.4",
     "cross-fetch": "^3.1.5",
     "dotenv-expand": "^9.0.0",
