--- a/packages/server-shared/package.json
+++ b/packages/server-shared/package.json
@@ -3,7 +3,7 @@
 	"private": true,
 	"version": "0.0.1",
 	"description": "",
-	"main": "src/index.ts",
+	"main": "src/index.tsx",
 	"author": "Max Willmott <max.willmo@gmail.com>",
 	"license": "MIT"
 }
