--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.18.0",
+    "@tanstack/react-query-devtools": "^4.19.0",
     "@vercel/node": "^2.6.4",
     "cross-fetch": "^3.1.5",
     "dotenv-expand": "^9.0.0",
