--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -18,7 +18,7 @@
 		"start:server": "node server_dist/server.js"
 	},
 	"dependencies": {
-		"fragments": "*",
+		"shared": "*",
 		"react": "*",
 		"react-dom": "*",
 		"server-shared": "*"
