--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start:server": "turbo start:server"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.8",
     "@types/react": "^18.0.24",
@@ -42,6 +43,7 @@
     "@tanstack/react-query": "^4.18.0",
     "@tanstack/react-query-devtools": "^4.19.0",
     "@vercel/node": "^2.6.4",
+    "cors": "^2.8.5",
     "cross-fetch": "^3.1.5",
     "dotenv-expand": "^9.0.0",
     "jotai": "^1.10.0",
