--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,7 @@
 	"$schema": "https://turbo.build/schema.json",
 	"globalDependencies": [".env.development"],
 	"pipeline": {
-		"dev:stream": {},
+		"dev": {},
 		"dev:static": {},
 		"build:server:static": {},
 		"build:server:stream": {},
