--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "turbo dev",
     "dev:static": "turbo dev:static",
     "build:server:static": "turbo build:server:static",
-    "build:server:stream": "turbo build:server:stream",
+    "build:server": "turbo build:server",
     "start:server": "turbo start:server"
   },
   "devDependencies": {
